[package]
name = "rledger"
version = "0.1.0"
authors = ["Rik Chilvers <rikchilvers@fastmail.com>"]
edition = "2018"

[workspace]

[dependencies]
journal = { path = "journal" }
reader = { path = "reader" }
clap = "2"

# https://lemmy.ml/post/50089
[profile.dev]
debug = 0

# for flamegraph
[profile.release]
debug = true
