[package]
name = "rledger"
version = "0.1.0"
authors = ["Rik Chilvers <rikchilvers@fastmail.com>"]
edition = "2018"

[workspace]

[dependencies]
journal = { path = "journal" }
reader = { path = "reader" }
tree = { path = "tree" }
clap = "2.33.3"

# https://lemmy.ml/post/50089
# update: https://jakedeichert.com/blog/reducing-rust-incremental-compilation-times-on-macos-by-70-percent/
[profile.dev]
split-debuginfo = "unpacked"

# for flamegraph
# [profile.release]
# debug = true
